designed fiducial ranking

--- a/src/experiments.ipynb
+++ b/src/experiments.ipynb
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Overlapped visualisation\n",
-    "landmarks = [\"right bony anterior\", 'right top orbit', \"nasion\"]\n",
+    "landmarks = ['right soft anterior', 'nasion', 'right bottom orbit']\n",
     "annotated = [3, 4, 6, 7, 8, 9, 10, 11, 14, 15, 17, 18, 20, 21, 22, 23, 24]\n",
     "meshes = []\n",
     "for i in annotated:\n",
@@ -73,7 +73,7 @@
    ],
    "source": [
     "annotated = [3, 4, 6, 7, 8, 9, 10, 11, 14, 15, 17, 18, 20, 21, 22, 23, 24]\n",
-    "# landmarks = [\"right bony anterior\", 'right top orbit', \"nasion\"]\n",
+    "landmarks = [\"right bony anterior\", 'right top orbit', \"nasion\"]\n",
     "# visualise_canal_planes(annotated, \"anterior\", landmarks)\n",
     "# visualise_canal_planes(annotated, \"lateral\")\n",
     "matrices = []\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +124,8 @@
    "source": [
     "annotated = [3, 4, 6, 7, 8, 9, 10, 11, 14, 15, 17, 18, 20, 21, 22, 23, 24]\n",
     "landmarks1 = [\"nasion\", \"right bottom orbit\",  'right top orbit']\n",
-    "landmarks2 = [\"right soft anterior\",  \"right bottom orbit\", 'right top orbit']\n",
-    "landmarks3 = [\"right top orbit\",  \"nasion\", 'right bottom orbit']\n",
+    "landmarks2 = [\"right bottom orbit\", 'right top orbit', \"nasion\"]\n",
+    "landmarks3 = [\"nasion\", \"right top orbit\",  'right bottom orbit']\n",
     "landmarks = landmarks1\n",
     "canal = \"posterior\"\n",
     "normals = compute_normals(annotated, canal, landmarks)\n",
@@ -144,23 +144,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.3170059  -0.14486972 -0.92518971]\n",
-      "[[ 0.00582512  0.00125145 -0.00197593]\n",
-      " [ 0.00125145  0.01666641 -0.0039014 ]\n",
-      " [-0.00197593 -0.0039014   0.00155543]]\n",
-      "1.4131422441503276e-08\n"
+      "[-0.54313577  0.23593067 -0.78952571]\n",
+      "[[ 0.00554038  0.00376669 -0.00257664]\n",
+      " [ 0.00376669  0.01935164  0.00315466]\n",
+      " [-0.00257664  0.00315466  0.00283001]]\n",
+      "1.8420320314748018e-08\n"
      ]
     }
    ],
    "source": [
-    "mu, sigma = compute_normals_stats(annotated[1:], \"posterior\", landmarks2)\n",
+    "mu, sigma = compute_normals_stats(annotated[1:], \"posterior\", landmarks3)\n",
     "print(mu, sigma, np.linalg.det(sigma), sep = \"\\n\")"
    ]
   },
@@ -211,6 +211,156 @@
     "    cov /= len(xs) - 1\n",
     "    print(cov)\n",
     "    print(np.linalg.det(cov))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_landmarks = list(get_landmarks_from_ply(15))[3:]\n",
+    "N = len(all_landmarks)\n",
+    "min_vars_dict = {\"anterior\": 1, \"lateral\": 1, \"posterior\": 1, \"all\": 3}\n",
+    "min_fids_dict = {\"anterior\": \"name\", \"lateral\": \"name\", \"posterior\": \"name\", \"all\": \"name\"}\n",
+    "results_dict = {}\n",
+    "for i in range(N):\n",
+    "    A = all_landmarks[i]\n",
+    "    for j in range(i + 1, N):\n",
+    "        B = all_landmarks[j]\n",
+    "        for k in range(j + 1, N):\n",
+    "            C = all_landmarks[k]\n",
+    "            for pair in [[A, B, C], [B, C, A], [C, A, B]]:\n",
+    "                key = A + \", \" + B + \", \" + C\n",
+    "                results_dict[key] = {}\n",
+    "                var_sum = 0\n",
+    "                for canal in [\"anterior\", \"posterior\", \"lateral\"]:\n",
+    "                    mean, cov = compute_normals_stats(annotated, canal, pair)\n",
+    "                    var =  np.linalg.det(cov)\n",
+    "                    results_dict[key][canal] = var\n",
+    "                    if var < min_vars_dict[canal]: \n",
+    "                        min_fids_dict[canal] = key\n",
+    "                        min_vars_dict[canal] = var\n",
+    "                    var_sum += var\n",
+    "                if var_sum < min_vars_dict[\"all\"]: \n",
+    "                    min_fids_dict[\"all\"] = key\n",
+    "                    min_vars_dict[\"all\"] = var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visible_landmarks = [\"right soft anterior\", \"right soft posterior\", \"nasion\", \"right top orbit\", \"right bottom orbit\"]\n",
+    "N = len(visible_landmarks)\n",
+    "min_vars_dict2 = {\"anterior\": 1, \"lateral\": 1, \"posterior\": 1, \"all\": 3}\n",
+    "min_fids_dict2 = {\"anterior\": \"name\", \"lateral\": \"name\", \"posterior\": \"name\", \"all\": \"name\"}\n",
+    "results_dict2 = {}\n",
+    "for i in range(N):\n",
+    "    A = visible_landmarks[i]\n",
+    "    for j in range(i + 1, N):\n",
+    "        B = visible_landmarks[j]\n",
+    "        for k in range(j + 1, N):\n",
+    "            C = visible_landmarks[k]\n",
+    "            for pair in [[A, B, C], [B, C, A], [C, A, B]]:\n",
+    "                if \"right soft anterior\" in pair and \"right soft posterior\" in pair: break\n",
+    "                key = A + \", \" + B + \", \" + C\n",
+    "                results_dict2[key] = {}\n",
+    "                var_sum = 0\n",
+    "                for canal in [\"anterior\", \"posterior\", \"lateral\"]:\n",
+    "                    mean, cov = compute_normals_stats(annotated, canal, pair)\n",
+    "                    var =  np.linalg.det(cov)\n",
+    "                    results_dict2[key][canal] = var\n",
+    "                    if var < min_vars_dict2[canal]: \n",
+    "                        min_fids_dict2[canal] = key\n",
+    "                        min_vars_dict2[canal] = var\n",
+    "                    var_sum += var\n",
+    "                if var_sum < min_vars_dict2[\"all\"]: \n",
+    "                    min_fids_dict2[\"all\"] = key\n",
+    "                    min_vars_dict2[\"all\"] = var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'anterior': 1.0483974715381363e-09,\n",
+       " 'posterior': 1.9175422907609147e-08,\n",
+       " 'lateral': 2.2529413399983677e-08}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_dict2['right soft anterior, nasion, right top orbit']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'anterior': 7.401160251685614e-10, 'lateral': 1.1514639419243219e-08, 'posterior': 1.4236858056316502e-08, 'all': 2.3448529516789395e-08}\n",
+      "{'anterior': 'right soft anterior, right top orbit, right bottom orbit', 'lateral': 'nasion, right top orbit, right bottom orbit', 'posterior': 'right soft anterior, nasion, right bottom orbit', 'all': 'right soft anterior, nasion, right top orbit'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(min_vars_dict2)\n",
+    "print(min_fids_dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def best_alignment(canal, visible=True, all=False):\n",
+    "    if all: key = \"all\"\n",
+    "    else: key = canal\n",
+    "    if visible: \n",
+    "        var = min_vars_dict2[key]\n",
+    "        landmarks_string = min_fids_dict2[key]\n",
+    "    else:\n",
+    "        var = min_vars_dict[key]\n",
+    "        landmarks_string = min_fids_dict[key]\n",
+    "    landmarks = landmarks_string.split(\", \")\n",
+    "    mean_init, cov_init = compute_normals_stats(annotated, canal)\n",
+    "    print(\"Landmarks\", landmarks)\n",
+    "    print(\"Improvement:\", np.linalg.det(cov_init)/var)\n",
+    "    visualise_canal_planes(annotated, canal, landmarks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Landmarks ['right soft anterior', 'nasion', 'right bottom orbit']\n",
+      "Improvement: 4.304623426262201\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_alignment(\"posterior\", True)"
    ]
   }
  ],
