fiducial pair optimisation functions

--- a/src/experiments.ipynb
+++ b/src/experiments.ipynb
@@ -85,28 +85,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_normals(subjects, canal, landmarks=None):\n",
-    "    normals = []\n",
-    "    for subject in subjects:\n",
-    "        vals, vecs, vertices = get_canal_plane(subject, canal, landmarks)\n",
-    "        normals.append(vecs[:, 0])\n",
-    "    return np.array(normals)\n",
-    "\n",
-    "def compute_normals_stats(subjects, canal, landmarks=None):\n",
-    "    normals = compute_normals(subjects, canal, landmarks)\n",
-    "    sample_cov = np.zeros((3, 3))\n",
-    "    mean_normal = np.mean(normals, axis = 0)\n",
-    "    for normal in normals:\n",
-    "        sample_cov += np.outer(normal-mean_normal, normal-mean_normal)\n",
-    "    return mean_normal, sample_cov / (len(subjects) - 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -215,78 +193,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_landmarks = list(get_landmarks_from_ply(15))[3:]\n",
-    "N = len(all_landmarks)\n",
-    "min_vars_dict = {\"anterior\": 1, \"lateral\": 1, \"posterior\": 1, \"all\": 3}\n",
-    "min_fids_dict = {\"anterior\": \"name\", \"lateral\": \"name\", \"posterior\": \"name\", \"all\": \"name\"}\n",
-    "results_dict = {}\n",
-    "for i in range(N):\n",
-    "    A = all_landmarks[i]\n",
-    "    for j in range(i + 1, N):\n",
-    "        B = all_landmarks[j]\n",
-    "        for k in range(j + 1, N):\n",
-    "            C = all_landmarks[k]\n",
-    "            for pair in [[A, B, C], [B, C, A], [C, A, B]]:\n",
-    "                key = A + \", \" + B + \", \" + C\n",
-    "                results_dict[key] = {}\n",
-    "                var_sum = 0\n",
-    "                for canal in [\"anterior\", \"posterior\", \"lateral\"]:\n",
-    "                    mean, cov = compute_normals_stats(annotated, canal, pair)\n",
-    "                    var =  np.linalg.det(cov)\n",
-    "                    results_dict[key][canal] = var\n",
-    "                    if var < min_vars_dict[canal]: \n",
-    "                        min_fids_dict[canal] = key\n",
-    "                        min_vars_dict[canal] = var\n",
-    "                    var_sum += var\n",
-    "                if var_sum < min_vars_dict[\"all\"]: \n",
-    "                    min_fids_dict[\"all\"] = key\n",
-    "                    min_vars_dict[\"all\"] = var"
+    "rd2, vd2, fd2 = compute_fiducials_dicts(False, True, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visible_landmarks = [\"right soft anterior\", \"right soft posterior\", \"nasion\", \"right top orbit\", \"right bottom orbit\"]\n",
-    "N = len(visible_landmarks)\n",
-    "min_vars_dict2 = {\"anterior\": 1, \"lateral\": 1, \"posterior\": 1, \"all\": 3}\n",
-    "min_fids_dict2 = {\"anterior\": \"name\", \"lateral\": \"name\", \"posterior\": \"name\", \"all\": \"name\"}\n",
-    "results_dict2 = {}\n",
-    "for i in range(N):\n",
-    "    A = visible_landmarks[i]\n",
-    "    for j in range(i + 1, N):\n",
-    "        B = visible_landmarks[j]\n",
-    "        for k in range(j + 1, N):\n",
-    "            C = visible_landmarks[k]\n",
-    "            for pair in [[A, B, C], [B, C, A], [C, A, B]]:\n",
-    "                if \"right soft anterior\" in pair and \"right soft posterior\" in pair: break\n",
-    "                key = A + \", \" + B + \", \" + C\n",
-    "                results_dict2[key] = {}\n",
-    "                var_sum = 0\n",
-    "                for canal in [\"anterior\", \"posterior\", \"lateral\"]:\n",
-    "                    mean, cov = compute_normals_stats(annotated, canal, pair)\n",
-    "                    var =  np.linalg.det(cov)\n",
-    "                    results_dict2[key][canal] = var\n",
-    "                    if var < min_vars_dict2[canal]: \n",
-    "                        min_fids_dict2[canal] = key\n",
-    "                        min_vars_dict2[canal] = var\n",
-    "                    var_sum += var\n",
-    "                if var_sum < min_vars_dict2[\"all\"]: \n",
-    "                    min_fids_dict2[\"all\"] = key\n",
-    "                    min_vars_dict2[\"all\"] = var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'anterior': 'right soft anterior, right top orbit, right bottom orbit', 'lateral': 'nasion, right bottom orbit, right bony posterior', 'posterior': 'nasion, right bottom orbit, right bony posterior', 'all': 'nasion, right bottom orbit, right bony anterior'}\n",
+      "{'anterior': 7.401160251685614e-10, 'lateral': 4.768222085801673e-09, 'posterior': 9.557867901914304e-09, 'all': 6.604785573296564e-09}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -295,59 +221,20 @@
        " 'lateral': 2.2529413399983677e-08}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results_dict2['right soft anterior, nasion, right top orbit']"
+    "print(vd2)\n",
+    "print(fd2)\n",
+    "rd2['right soft anterior, nasion, right top orbit']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'anterior': 7.401160251685614e-10, 'lateral': 1.1514639419243219e-08, 'posterior': 1.4236858056316502e-08, 'all': 2.3448529516789395e-08}\n",
-      "{'anterior': 'right soft anterior, right top orbit, right bottom orbit', 'lateral': 'nasion, right top orbit, right bottom orbit', 'posterior': 'right soft anterior, nasion, right bottom orbit', 'all': 'right soft anterior, nasion, right top orbit'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(min_vars_dict2)\n",
-    "print(min_fids_dict2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def best_alignment(canal, visible=True, all=False):\n",
-    "    if all: key = \"all\"\n",
-    "    else: key = canal\n",
-    "    if visible: \n",
-    "        var = min_vars_dict2[key]\n",
-    "        landmarks_string = min_fids_dict2[key]\n",
-    "    else:\n",
-    "        var = min_vars_dict[key]\n",
-    "        landmarks_string = min_fids_dict[key]\n",
-    "    landmarks = landmarks_string.split(\", \")\n",
-    "    mean_init, cov_init = compute_normals_stats(annotated, canal)\n",
-    "    print(\"Landmarks\", landmarks)\n",
-    "    print(\"Improvement:\", np.linalg.det(cov_init)/var)\n",
-    "    visualise_canal_planes(annotated, canal, landmarks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
