--- a/src/experiments.ipynb
+++ b/src/experiments.ipynb
@@ -24,6 +24,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import open3d as o3d\n",
+    "\n",
+    "mesh = o3d.o3d.io.read_triangle_mesh(\"../cochlea_data/canonical_coloured.ply\")\n",
+    "visualise_meshes([mesh])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
