new results on fiducial choices

--- a/python/experiments.ipynb
+++ b/python/experiments.ipynb
@@ -24,6 +24,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created right otic capsule with landmarks.ply for Subject 01\n",
+      "Created right otic capsule with landmarks.ply for Subject 02\n",
+      "Created right otic capsule with landmarks.ply for Subject 03\n",
+      "Created right otic capsule with landmarks.ply for Subject 04\n",
+      "Created right otic capsule with landmarks.ply for Subject 05\n",
+      "Created right otic capsule with landmarks.ply for Subject 06\n",
+      "Created right otic capsule with landmarks.ply for Subject 07\n",
+      "Created right otic capsule with landmarks.ply for Subject 08\n",
+      "Created right otic capsule with landmarks.ply for Subject 09\n",
+      "Created right otic capsule with landmarks.ply for Subject 10\n",
+      "Created right otic capsule with landmarks.ply for Subject 11\n",
+      "Created right otic capsule with landmarks.ply for Subject 12\n",
+      "Created left otic capsule with landmarks.ply for Subject 13\n",
+      "Created right otic capsule with landmarks.ply for Subject 14\n",
+      "Created right otic capsule with landmarks.ply for Subject 15\n",
+      "Created right otic capsule with landmarks.ply for Subject 16\n",
+      "Created right otic capsule with landmarks.ply for Subject 17\n",
+      "Created right otic capsule with landmarks.ply for Subject 18\n",
+      "Created right otic capsule with landmarks.ply for Subject 19\n",
+      "Created right otic capsule with landmarks.ply for Subject 20\n",
+      "Created right otic capsule with landmarks.ply for Subject 21\n",
+      "Created right otic capsule with landmarks.ply for Subject 22\n",
+      "Created right otic capsule with landmarks.ply for Subject 23\n",
+      "Created right otic capsule with landmarks.ply for Subject 24\n",
+      "Created right otic capsule with landmarks.ply for Subject 25\n",
+      "Created right otic capsule with landmarks.ply for Subject 26\n",
+      "Created right otic capsule with landmarks.ply for Subject 27\n",
+      "Created right otic capsule with landmarks.ply for Subject 28\n",
+      "Created right otic capsule with landmarks.ply for Subject 29\n",
+      "Created right otic capsule with landmarks.ply for Subject 30\n",
+      "Created right otic capsule with landmarks.ply for Subject 31\n",
+      "Created right otic capsule with landmarks.ply for Subject 32\n",
+      "Created right otic capsule with landmarks.ply for Subject 33\n",
+      "Created right otic capsule with landmarks.ply for Subject 34\n",
+      "Created right otic capsule with landmarks.ply for Subject 35\n",
+      "Created right otic capsule with landmarks.ply for Subject 36\n",
+      "Created right otic capsule with landmarks.ply for Subject 37\n",
+      "Created right otic capsule with landmarks.ply for Subject 38\n",
+      "Created right otic capsule with landmarks.ply for Subject 39\n",
+      "Created right otic capsule with landmarks.ply for Subject 40\n",
+      "Created right otic capsule with landmarks.ply for Subject 41\n",
+      "Created right otic capsule with landmarks.ply for Subject 42\n",
+      "Created right otic capsule with landmarks.ply for Subject 43\n",
+      "Created right otic capsule with landmarks.ply for Subject 44\n",
+      "Created right otic capsule with landmarks.ply for Subject 45\n",
+      "Created right otic capsule with landmarks.ply for Subject 46\n",
+      "Created right otic capsule with landmarks.ply for Subject 47\n",
+      "Created right otic capsule with landmarks.ply for Subject 48\n",
+      "Created right otic capsule with landmarks.ply for Subject 49\n",
+      "Created right otic capsule with landmarks.ply for Subject 50\n",
+      "Created right otic capsule with landmarks.ply for Subject 51\n",
+      "Created left otic capsule with landmarks.ply for Subject 52\n",
+      "Created right otic capsule with landmarks.ply for Subject 53\n",
+      "Created right otic capsule with landmarks.ply for Subject 54\n",
+      "Created right otic capsule with landmarks.ply for Subject 55\n",
+      "Created right otic capsule with landmarks.ply for Subject 56\n",
+      "Created right otic capsule with landmarks.ply for Subject 57\n",
+      "Created right otic capsule with landmarks.ply for Subject 58\n",
+      "Created right otic capsule with landmarks.ply for Subject 59\n",
+      "Created right otic capsule with landmarks.ply for Subject 60\n",
+      "Created right otic capsule with landmarks.ply for Subject 61\n",
+      "Created right otic capsule with landmarks.ply for Subject 62\n",
+      "Created right otic capsule with landmarks.ply for Subject 63\n",
+      "Created right otic capsule with landmarks.ply for Subject 64\n",
+      "Created right otic capsule with landmarks.ply for Subject 65\n",
+      "Created right otic capsule with landmarks.ply for Subject 66\n",
+      "Created right otic capsule with landmarks.ply for Subject 67\n",
+      "Created right otic capsule with landmarks.ply for Subject 68\n",
+      "Created right otic capsule with landmarks.ply for Subject 69\n",
+      "Created left otic capsule with landmarks.ply for Subject 70\n",
+      "Created right otic capsule with landmarks.ply for Subject 71\n",
+      "Created right otic capsule with landmarks.ply for Subject 72\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 74):\n",
+    "    copy_landmarks(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "landmarks = [\"right bottom orbit\", \"left bottom orbit\", \"nasion\"]\n",
+    "matrix = get_rotation_matrix(3, landmarks)\n",
+    "path = get_ply_path(3)\n",
+    "mesh = o3d.io.read_triangle_mesh(path)\n",
+    "vertices = np.array(mesh.vertices) - np.mean(np.array(mesh.vertices), axis=0)\n",
+    "mesh.vertices = o3d.utility.Vector3dVector(vertices)\n",
+    "mesh_r = rotate_mesh(mesh, matrix)\n",
+    "o3d.io.write_triangle_mesh(\"../meshes/capsule.ply\", mesh_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
