find best fiducials without ears

--- a/python/experiments.ipynb
+++ b/python/experiments.ipynb
@@ -27,6 +27,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_dict, best_fids_dict, min_angs_dict, max_improvs_dict, kept_dict = load_fiducials_dicts()\n",
+    "\n",
+    "min_angs_dict = {\"anterior\": 100, \"lateral\": 100, \"posterior\": 100, \"all\": 100}\n",
+    "max_improvs_dict = {\"anterior\": 0, \"lateral\": 0, \"posterior\": 0, \"all\": 0}\n",
+    "best_fids_dict = {\"anterior\": [\"name\", \"name\"], \"lateral\": [\"name\", \"name\"], \"posterior\": [\"name\", \"name\"], \"all\": [\"name\", \"name\"]}\n",
+    "\n",
+    "for key in results_dict:\n",
+    "    if  \"occiput\" not in key and \"soft\" not in key: \n",
+    "        for canal in [\"anterior\", \"posterior\", \"lateral\"]:\n",
+    "            if results_dict[key][canal][0] < min_angs_dict[canal]:\n",
+    "                min_angs_dict[canal] = results_dict[key][canal][0]\n",
+    "                best_fids_dict[canal][0] = key\n",
+    "            if results_dict[key][canal][1] > max_improvs_dict[canal]:\n",
+    "                max_improvs_dict[canal] = results_dict[key][canal][1]\n",
+    "                best_fids_dict[canal][1] = key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'anterior': ['nasion, left top orbit, right bottom orbit', 'name'],\n",
+       " 'lateral': ['nasion, right bottom orbit, septum',\n",
+       "  'left top orbit, right top orbit, septum'],\n",
+       " 'posterior': ['right top orbit, nasion, left bottom orbit', 'name'],\n",
+       " 'all': ['name', 'name']}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_fids_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kept_dict[best_fids_dict[\"lateral\"][0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'anterior': 18.786835064554623,\n",
+       " 'lateral': 10.76444270692611,\n",
+       " 'posterior': 16.747945433845057,\n",
+       " 'all': 100}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_angs_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
