--- a/python/experiments.ipynb
+++ b/python/experiments.ipynb
@@ -167,11 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualise_variation_modes(4, \"lateral\")"
+    "visualise_subject_planes(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_dict, best_fids_dict, min_angs_dict, max_improvs_dict, kept_dict = load_fiducials_dicts()\n",
+    "visualise_canal_planes(right, \"posterior\", get_landmarks_from_key(best_fids_dict[\"posterior\"][0]), True, False, spacing=3)"
    ]
   },
   {
